[package]
name = "vaultdash"
version = "0.1.0"
description = "Terminal dashboard for monitoring SAFE Network vaults"
authors = ["Mark <git@happybeing.com>"]
license = "GPL-3.0"
homepage = "https://github.com/theWebalyst/vault-dash"
repository = "https://github.com/theWebalyst/vault-dash"
readme = "README.md"
keywords = ["utility", "safenetwork", "vault", "terminal", "dashboard", "monitor", "cli"]
categories = ["command-line-utilities", "safe-network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "~0.3.15"
termion = "1.5.5"
tui = "0.10.0"
linemux = "0.1.1"
tokio = "0.2.22"
futures = "0.3.5"
